--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css">
+    <link rel="stylesheet" href="index.css">
     <title>Grocery List</title>
 </head>
 <body>
@@ -43,6 +43,6 @@
 
    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-   <script src="/js"></script>
+   <script src="main.js"></script>
 </body>
 </html>
